parser.output
Terminals unused in grammar

    ACCOLAD_D
    TOKEN_FININPUT


Grammar

    0 $accept: program $end

    1 program: TOKEN_DECLARE bloc_declaration TOKEN_START bloc_code TOKEN_STOP

    2 bloc_code: instruction bloc_code
    3          | commentaire bloc_code
    4          | %empty
    5          | error bloc_code

    6 bloc_declaration: DECLARE bloc_declaration
    7                 | commentaire bloc_declaration
    8                 | %empty

    9 commentaire: TOKEN_COMMENT
   10            | TOKEN_MULTICOM

   11 instruction: affectation
   12            | lecture
   13            | ecriture
   14            | conditionnel
   15            | while
   16            | for

   17 affectation: variable_name TOKEN_ASSIGN expression FININSTR
   18            | variable_name TOKEN_ASSIGN TOKEN_CHAR FININSTR

   19 variable_name: TOKEN_ID
   20              | TOKEN_ID CROCHET_G expression_arithmetique CROCHET_D
   21              | TOKEN_ID TOKEN_ACSTRUCT TOKEN_ID

   22 DECLARE: TOKEN_ID NUM FININSTR
   23        | TOKEN_ID BOOL FININSTR
   24        | TOKEN_ID CHAR FININSTR
   25        | TOKEN_CONST TOKEN_ID TOKEN_NUMBER FININSTR
   26        | TOKEN_CONST TOKEN_ID TOKEN_TRUE FININSTR
   27        | TOKEN_CONST TOKEN_ID TOKEN_FALSE FININSTR
   28        | TOKEN_CONST TOKEN_ID TOKEN_CHAR FININSTR
   29        | TOKEN_ID NUM CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR
   30        | TOKEN_ID BOOL CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR
   31        | TOKEN_ID CHAR CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR
   32        | TOKEN_ID TOKEN_ID CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR
   33        | TOKEN_ID TOKEN_ID FININSTR
   34        | TOKEN_STRUCT TOKEN_ID ACCOLAD_G LISTE ACCOLAD_G FININSTR

   35 LISTE: %empty
   36      | LISTE CHAMP

   37 CHAMP: TOKEN_ID NUM FININSTR
   38      | TOKEN_ID BOOL FININSTR
   39      | TOKEN_ID CHAR FININSTR
   40      | TOKEN_ID NUM CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR
   41      | TOKEN_ID BOOL CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR
   42      | TOKEN_ID CHAR CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR
   43      | TOKEN_ID TOKEN_ID FININSTR

   44 expression: expression_arithmetique
   45           | ExpBool

   46 expression_arithmetique: TOKEN_NUMBER
   47                        | addition
   48                        | soustraction
   49                        | multiplication
   50                        | division
   51                        | modulo
   52                        | PARENTHESE_G expression_arithmetique PARENTHESE_D

   53 addition: expression_arithmetique TOKEN_ADD expression_arithmetique

   54 soustraction: expression_arithmetique TOKEN_SOUSTR expression_arithmetique

   55 multiplication: expression_arithmetique TOKEN_MULT expression_arithmetique

   56 division: expression_arithmetique TOKEN_DIVIS expression_arithmetique

   57 modulo: expression_arithmetique TOKEN_MOD expression_arithmetique

   58 ecriture: TOKEN_WRITE variable_name FININSTR
   59         | TOKEN_WRITE TOKEN_TEXT FININSTR

   60 lecture: TOKEN_READ variable_name FININSTR

   61 while: TOKEN_WHILE ExpBool TOKEN_BEGIN bloc_code END

   62 for: TOKEN_FOR TOKEN_ID TOKEN_FROM TOKEN_NUMBER TOKEN_COMMA TOKEN_NUMBER TOKEN_BEGIN bloc_code END
   63    | TOKEN_FOR TOKEN_ID TOKEN_IN TOKEN_ID TOKEN_BEGIN bloc_code END

   64 conditionnel: TOKEN_IF ExpBool TOKEN_BEGIN bloc_code END
   65             | TOKEN_IF ExpBool TOKEN_BEGIN bloc_code TOKEN_ELSE bloc_code END

   66 ExpBool: variable_name
   67        | Comparaison
   68        | TOKEN_FALSE
   69        | TOKEN_TRUE
   70        | PARENTHESE_G ExpBool PARENTHESE_D
   71        | TOKEN_NOT ExpBool
   72        | ExpBool TOKEN_AND ExpBool
   73        | ExpBool TOKEN_OR ExpBool

   74 Comparaison: comparable TOKEN_EGAL comparable
   75            | comparable TOKEN_DIFF comparable
   76            | comparable TOKEN_SUP comparable
   77            | comparable TOKEN_SUPEGAL comparable
   78            | comparable TOKEN_INF comparable
   79            | comparable TOKEN_INFEGAL comparable

   80 comparable: TOKEN_NUMBER


Terminals, with rules where they appear

    $end (0) 0
    error (256) 5
    TOKEN_ADD (258) 53
    TOKEN_SOUSTR (259) 54
    TOKEN_OR (260) 73
    TOKEN_MULT (261) 55
    TOKEN_DIVIS (262) 56
    TOKEN_AND (263) 72
    TOKEN_NOT (264) 71
    TOKEN_MOD (265) 57
    PARENTHESE_G (266) 52 70
    PARENTHESE_D (267) 52 70
    TOKEN_MULTICOM (268) 10
    TOKEN_COMMENT (269) 9
    TOKEN_CHAR <CHARACTER> (270) 18 28
    TOKEN_TEXT <text> (271) 59
    TOKEN_NUMBER <num> (272) 25 29 30 31 32 40 41 42 46 62 80
    TOKEN_FALSE <BOOLEAN> (273) 27 68
    TOKEN_TRUE <BOOLEAN> (274) 26 69
    TOKEN_DECLARE (275) 1
    TOKEN_CONST (276) 25 26 27 28
    TOKEN_START (277) 1
    TOKEN_STOP (278) 1
    TOKEN_STRUCT (279) 34
    TOKEN_READ (280) 60
    TOKEN_WRITE (281) 58 59
    TOKEN_IF (282) 64 65
    TOKEN_ELSE (283) 65
    TOKEN_FOR (284) 62 63
    TOKEN_IN (285) 63
    TOKEN_FROM (286) 62
    TOKEN_WHILE (287) 61
    TOKEN_ASSIGN (288) 17 18
    NUM (289) 22 29 37 40
    BOOL (290) 23 30 38 41
    CHAR (291) 24 31 39 42
    FININSTR (292) 17 18 22 23 24 25 26 27 28 29 30 31 32 33 34 37 38 39 40 41 42 43 58 59 60
    ACCOLAD_G (293) 34
    ACCOLAD_D (294)
    TOKEN_BEGIN (295) 61 62 63 64 65
    END (296) 61 62 63 64 65
    TOKEN_INF (297) 78
    TOKEN_SUP (298) 76
    TOKEN_INFEGAL (299) 79
    TOKEN_SUPEGAL (300) 77
    TOKEN_EGAL (301) 74
    TOKEN_DIFF (302) 75
    TOKEN_COMMA (303) 62
    TOKEN_ACSTRUCT (304) 21
    TOKEN_ID <text> (305) 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 37 38 39 40 41 42 43 62 63
    TOKEN_FININPUT (306)
    CROCHET_G (307) 20 29 30 31 32 40 41 42
    CROCHET_D (308) 20 29 30 31 32 40 41 42


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    program (55)
        on left: 1
        on right: 0
    bloc_code (56)
        on left: 2 3 4 5
        on right: 1 2 3 5 61 62 63 64 65
    bloc_declaration (57)
        on left: 6 7 8
        on right: 1 6 7
    commentaire <text> (58)
        on left: 9 10
        on right: 3 7
    instruction <text> (59)
        on left: 11 12 13 14 15 16
        on right: 2
    affectation <text> (60)
        on left: 17 18
        on right: 11
    variable_name <text> (61)
        on left: 19 20 21
        on right: 17 18 58 60 66
    DECLARE <text> (62)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 6
    LISTE <text> (63)
        on left: 35 36
        on right: 34 36
    CHAMP <text> (64)
        on left: 37 38 39 40 41 42 43
        on right: 36
    expression (65)
        on left: 44 45
        on right: 17
    expression_arithmetique <num> (66)
        on left: 46 47 48 49 50 51 52
        on right: 20 44 52 53 54 55 56 57
    addition <num> (67)
        on left: 53
        on right: 47
    soustraction <num> (68)
        on left: 54
        on right: 48
    multiplication <num> (69)
        on left: 55
        on right: 49
    division <num> (70)
        on left: 56
        on right: 50
    modulo <num> (71)
        on left: 57
        on right: 51
    ecriture <text> (72)
        on left: 58 59
        on right: 13
    lecture <text> (73)
        on left: 60
        on right: 12
    while <text> (74)
        on left: 61
        on right: 15
    for <text> (75)
        on left: 62 63
        on right: 16
    conditionnel <text> (76)
        on left: 64 65
        on right: 14
    ExpBool <BOOLEAN> (77)
        on left: 66 67 68 69 70 71 72 73
        on right: 45 61 64 65 70 71 72 73
    Comparaison <BOOLEAN> (78)
        on left: 74 75 76 77 78 79
        on right: 67
    comparable <num> (79)
        on left: 80
        on right: 74 75 76 77 78 79


State 0

    0 $accept: . program $end

    TOKEN_DECLARE  shift, and go to state 1

    program  go to state 2


State 1

    1 program: TOKEN_DECLARE . bloc_declaration TOKEN_START bloc_code TOKEN_STOP

    TOKEN_MULTICOM  shift, and go to state 3
    TOKEN_COMMENT   shift, and go to state 4
    TOKEN_CONST     shift, and go to state 5
    TOKEN_STRUCT    shift, and go to state 6
    TOKEN_ID        shift, and go to state 7

    $default  reduce using rule 8 (bloc_declaration)

    bloc_declaration  go to state 8
    commentaire       go to state 9
    DECLARE           go to state 10


State 2

    0 $accept: program . $end

    $end  shift, and go to state 11


State 3

   10 commentaire: TOKEN_MULTICOM .

    $default  reduce using rule 10 (commentaire)


State 4

    9 commentaire: TOKEN_COMMENT .

    $default  reduce using rule 9 (commentaire)


State 5

   25 DECLARE: TOKEN_CONST . TOKEN_ID TOKEN_NUMBER FININSTR
   26        | TOKEN_CONST . TOKEN_ID TOKEN_TRUE FININSTR
   27        | TOKEN_CONST . TOKEN_ID TOKEN_FALSE FININSTR
   28        | TOKEN_CONST . TOKEN_ID TOKEN_CHAR FININSTR

    TOKEN_ID  shift, and go to state 12


State 6

   34 DECLARE: TOKEN_STRUCT . TOKEN_ID ACCOLAD_G LISTE ACCOLAD_G FININSTR

    TOKEN_ID  shift, and go to state 13


State 7

   22 DECLARE: TOKEN_ID . NUM FININSTR
   23        | TOKEN_ID . BOOL FININSTR
   24        | TOKEN_ID . CHAR FININSTR
   29        | TOKEN_ID . NUM CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR
   30        | TOKEN_ID . BOOL CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR
   31        | TOKEN_ID . CHAR CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR
   32        | TOKEN_ID . TOKEN_ID CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR
   33        | TOKEN_ID . TOKEN_ID FININSTR

    NUM       shift, and go to state 14
    BOOL      shift, and go to state 15
    CHAR      shift, and go to state 16
    TOKEN_ID  shift, and go to state 17


State 8

    1 program: TOKEN_DECLARE bloc_declaration . TOKEN_START bloc_code TOKEN_STOP

    TOKEN_START  shift, and go to state 18


State 9

    7 bloc_declaration: commentaire . bloc_declaration

    TOKEN_MULTICOM  shift, and go to state 3
    TOKEN_COMMENT   shift, and go to state 4
    TOKEN_CONST     shift, and go to state 5
    TOKEN_STRUCT    shift, and go to state 6
    TOKEN_ID        shift, and go to state 7

    $default  reduce using rule 8 (bloc_declaration)

    bloc_declaration  go to state 19
    commentaire       go to state 9
    DECLARE           go to state 10


State 10

    6 bloc_declaration: DECLARE . bloc_declaration

    TOKEN_MULTICOM  shift, and go to state 3
    TOKEN_COMMENT   shift, and go to state 4
    TOKEN_CONST     shift, and go to state 5
    TOKEN_STRUCT    shift, and go to state 6
    TOKEN_ID        shift, and go to state 7

    $default  reduce using rule 8 (bloc_declaration)

    bloc_declaration  go to state 20
    commentaire       go to state 9
    DECLARE           go to state 10


State 11

    0 $accept: program $end .

    $default  accept


State 12

   25 DECLARE: TOKEN_CONST TOKEN_ID . TOKEN_NUMBER FININSTR
   26        | TOKEN_CONST TOKEN_ID . TOKEN_TRUE FININSTR
   27        | TOKEN_CONST TOKEN_ID . TOKEN_FALSE FININSTR
   28        | TOKEN_CONST TOKEN_ID . TOKEN_CHAR FININSTR

    TOKEN_CHAR    shift, and go to state 21
    TOKEN_NUMBER  shift, and go to state 22
    TOKEN_FALSE   shift, and go to state 23
    TOKEN_TRUE    shift, and go to state 24


State 13

   34 DECLARE: TOKEN_STRUCT TOKEN_ID . ACCOLAD_G LISTE ACCOLAD_G FININSTR

    ACCOLAD_G  shift, and go to state 25


State 14

   22 DECLARE: TOKEN_ID NUM . FININSTR
   29        | TOKEN_ID NUM . CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR

    FININSTR   shift, and go to state 26
    CROCHET_G  shift, and go to state 27


State 15

   23 DECLARE: TOKEN_ID BOOL . FININSTR
   30        | TOKEN_ID BOOL . CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR

    FININSTR   shift, and go to state 28
    CROCHET_G  shift, and go to state 29


State 16

   24 DECLARE: TOKEN_ID CHAR . FININSTR
   31        | TOKEN_ID CHAR . CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR

    FININSTR   shift, and go to state 30
    CROCHET_G  shift, and go to state 31


State 17

   32 DECLARE: TOKEN_ID TOKEN_ID . CROCHET_G TOKEN_NUMBER CROCHET_D FININSTR
   33        | TOKEN_ID TOKEN_ID . FININSTR

    FININSTR   shift, and go to state 32
    CROCHET_G  shift, and go to state 33


State 18

    1 program: TOKEN_DECLARE bloc_declaration TOKEN_START . bloc_code TOKEN_STOP

    error           shift, and go to state 34
    TOKEN_MULTICOM  shift, and go to state 3
    TOKEN_COMMENT   shift, and go to state 4
    TOKEN_READ      shift, and go to state 35
    TOKEN_WRITE     shift, and go to state 36
    TOKEN_IF        shift, and go to state 37
    TOKEN_FOR       shift, and go to state 38
    TOKEN_WHILE     shift, and go to state 39
    TOKEN_ID        shift, and go to state 40

    TOKEN_STOP  reduce using rule 4 (bloc_code)

    bloc_code      go to state 41
    commentaire    go to state 42
    instruction    go to state 43
    affectation    go to state 44
    variable_name  go to state 45
    ecriture       go to state 46
    lecture        go to state 47
    while          go to state 48
    for            go to state 49
    conditionnel   go to state 50


State 19

    7 bloc_declaration: commentaire bloc_declaration .

    $default  reduce using rule 7 (bloc_declaration)


State 20

    6 bloc_declaration: DECLARE bloc_declaration .

    $default  reduce using rule 6 (bloc_declaration)


State 21

   28 DECLARE: TOKEN_CONST TOKEN_ID TOKEN_CHAR . FININSTR

    FININSTR  shift, and go to state 51


State 22

   25 DECLARE: TOKEN_CONST TOKEN_ID TOKEN_NUMBER . FININSTR

    FININSTR  shift, and go to state 52


State 23

   27 DECLARE: TOKEN_CONST TOKEN_ID TOKEN_FALSE . FININSTR

    FININSTR  shift, and go to state 53


State 24

   26 DECLARE: TOKEN_CONST TOKEN_ID TOKEN_TRUE . FININSTR

    FININSTR  shift, and go to state 54


State 25

   34 DECLARE: TOKEN_STRUCT TOKEN_ID ACCOLAD_G . LISTE ACCOLAD_G FININSTR

    $default  reduce using rule 35 (LISTE)

    LISTE  go to state 55


State 26

   22 DECLARE: TOKEN_ID NUM FININSTR .

    $default  reduce using rule 22 (DECLARE)


State 27

   29 DECLARE: TOKEN_ID NUM CROCHET_G . TOKEN_NUMBER CROCHET_D FININSTR

    TOKEN_NUMBER  shift, and go to state 56


State 28

   23 DECLARE: TOKEN_ID BOOL FININSTR .

    $default  reduce using rule 23 (DECLARE)


State 29

   30 DECLARE: TOKEN_ID BOOL CROCHET_G . TOKEN_NUMBER CROCHET_D FININSTR

    TOKEN_NUMBER  shift, and go to state 57


State 30

   24 DECLARE: TOKEN_ID CHAR FININSTR .

    $default  reduce using rule 24 (DECLARE)


State 31

   31 DECLARE: TOKEN_ID CHAR CROCHET_G . TOKEN_NUMBER CROCHET_D FININSTR

    TOKEN_NUMBER  shift, and go to state 58


State 32

   33 DECLARE: TOKEN_ID TOKEN_ID FININSTR .

    $default  reduce using rule 33 (DECLARE)


State 33

   32 DECLARE: TOKEN_ID TOKEN_ID CROCHET_G . TOKEN_NUMBER CROCHET_D FININSTR

    TOKEN_NUMBER  shift, and go to state 59


State 34

    5 bloc_code: error . bloc_code

    error           shift, and go to state 34
    TOKEN_MULTICOM  shift, and go to state 3
    TOKEN_COMMENT   shift, and go to state 4
    TOKEN_READ      shift, and go to state 35
    TOKEN_WRITE     shift, and go to state 36
    TOKEN_IF        shift, and go to state 37
    TOKEN_FOR       shift, and go to state 38
    TOKEN_WHILE     shift, and go to state 39
    TOKEN_ID        shift, and go to state 40

    TOKEN_STOP  reduce using rule 4 (bloc_code)
    TOKEN_ELSE  reduce using rule 4 (bloc_code)
    END         reduce using rule 4 (bloc_code)

    bloc_code      go to state 60
    commentaire    go to state 42
    instruction    go to state 43
    affectation    go to state 44
    variable_name  go to state 45
    ecriture       go to state 46
    lecture        go to state 47
    while          go to state 48
    for            go to state 49
    conditionnel   go to state 50


State 35

   60 lecture: TOKEN_READ . variable_name FININSTR

    TOKEN_ID  shift, and go to state 40

    variable_name  go to state 61


State 36

   58 ecriture: TOKEN_WRITE . variable_name FININSTR
   59         | TOKEN_WRITE . TOKEN_TEXT FININSTR

    TOKEN_TEXT  shift, and go to state 62
    TOKEN_ID    shift, and go to state 40

    variable_name  go to state 63


State 37

   64 conditionnel: TOKEN_IF . ExpBool TOKEN_BEGIN bloc_code END
   65             | TOKEN_IF . ExpBool TOKEN_BEGIN bloc_code TOKEN_ELSE bloc_code END

    TOKEN_NOT     shift, and go to state 64
    PARENTHESE_G  shift, and go to state 65
    TOKEN_NUMBER  shift, and go to state 66
    TOKEN_FALSE   shift, and go to state 67
    TOKEN_TRUE    shift, and go to state 68
    TOKEN_ID      shift, and go to state 40

    variable_name  go to state 69
    ExpBool        go to state 70
    Comparaison    go to state 71
    comparable     go to state 72


State 38

   62 for: TOKEN_FOR . TOKEN_ID TOKEN_FROM TOKEN_NUMBER TOKEN_COMMA TOKEN_NUMBER TOKEN_BEGIN bloc_code END
   63    | TOKEN_FOR . TOKEN_ID TOKEN_IN TOKEN_ID TOKEN_BEGIN bloc_code END

    TOKEN_ID  shift, and go to state 73


State 39

   61 while: TOKEN_WHILE . ExpBool TOKEN_BEGIN bloc_code END

    TOKEN_NOT     shift, and go to state 64
    PARENTHESE_G  shift, and go to state 65
    TOKEN_NUMBER  shift, and go to state 66
    TOKEN_FALSE   shift, and go to state 67
    TOKEN_TRUE    shift, and go to state 68
    TOKEN_ID      shift, and go to state 40

    variable_name  go to state 69
    ExpBool        go to state 74
    Comparaison    go to state 71
    comparable     go to state 72


State 40

   19 variable_name: TOKEN_ID .
   20              | TOKEN_ID . CROCHET_G expression_arithmetique CROCHET_D
   21              | TOKEN_ID . TOKEN_ACSTRUCT TOKEN_ID

    TOKEN_ACSTRUCT  shift, and go to state 75
    CROCHET_G       shift, and go to state 76

    $default  reduce using rule 19 (variable_name)


State 41

    1 program: TOKEN_DECLARE bloc_declaration TOKEN_START bloc_code . TOKEN_STOP

    TOKEN_STOP  shift, and go to state 77


State 42

    3 bloc_code: commentaire . bloc_code

    error           shift, and go to state 34
    TOKEN_MULTICOM  shift, and go to state 3
    TOKEN_COMMENT   shift, and go to state 4
    TOKEN_READ      shift, and go to state 35
    TOKEN_WRITE     shift, and go to state 36
    TOKEN_IF        shift, and go to state 37
    TOKEN_FOR       shift, and go to state 38
    TOKEN_WHILE     shift, and go to state 39
    TOKEN_ID        shift, and go to state 40

    TOKEN_STOP  reduce using rule 4 (bloc_code)
    TOKEN_ELSE  reduce using rule 4 (bloc_code)
    END         reduce using rule 4 (bloc_code)

    bloc_code      go to state 78
    commentaire    go to state 42
    instruction    go to state 43
    affectation    go to state 44
    variable_name  go to state 45
    ecriture       go to state 46
    lecture        go to state 47
    while          go to state 48
    for            go to state 49
    conditionnel   go to state 50


State 43

    2 bloc_code: instruction . bloc_code
